Improved readability issues Added animations Fixed responsive layout for <video>

--- a/css/grid.css
+++ b/css/grid.css
@@ -391,6 +391,10 @@
     font-size: 2em;
   }
 
+  .bonus-item {
+    padding: 1em;
+  }
+
 }
 
 /*500px max height*/
